// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<RemoveSegment /> > should render when [show=false] 1`] = `
<RemoveModal
  name="bar"
  noun="Segment"
  onConfirm={[Function]}
  onHide={[MockFunction spy]}
  show={false}
/>
`;

exports[`<RemoveSegment /> > should render when [show=true] 1`] = `
<RemoveModal
  name="bar"
  noun="Segment"
  onConfirm={[Function]}
  onHide={[MockFunction spy]}
  show={true}
/>
`;
